--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -53,7 +53,7 @@ nav {
 
         &:hover::before {
           transform: translateY(10px);
-          opacity: 100%;
+          opacity: 1;
         }
       }
     }
