--- a/src/components/brandsIndividuals/brandsIndividuals.module.scss
+++ b/src/components/brandsIndividuals/brandsIndividuals.module.scss
@@ -39,3 +39,29 @@
     }
   }
 }
+
+@media (max-width: 1025px) {
+  .brandsIndividualsSection {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    img {
+      position: static;
+      width: 100%;
+    }
+
+    .brandsIndividualsContainer {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      p {
+        width: 95%;
+      }
+    }
+  }
+}
