--- a/src/components/partnersLogos/partnersLogos.module.scss
+++ b/src/components/partnersLogos/partnersLogos.module.scss
@@ -10,3 +10,23 @@
     justify-content: space-between;
   }
 }
+
+@media (max-width: 1601px) {
+  .partnersLogosSection {
+    .logosContainer {
+      width: 90%;
+    }
+  }
+}
+
+@media (max-width: 1025px) {
+  .partnersLogosSection {
+    .logosContainer {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      align-items: center;
+      justify-items: center;
+      gap: 41px;
+    }
+  }
+}
