--- a/src/components/brandsIndividuals/brandsIndividuals.module.scss
+++ b/src/components/brandsIndividuals/brandsIndividuals.module.scss
@@ -40,7 +40,7 @@
   }
 }
 
-@media (max-width: 1025px) {
+@media (max-width: 1200px) {
   .brandsIndividualsSection {
     height: 100%;
     display: flex;
@@ -59,8 +59,13 @@
       flex-direction: column;
       align-items: center;
 
+      h2 {
+        font-size: 54px;
+      }
+
       p {
         width: 95%;
+        font-size: 24px;
       }
     }
   }
