--- a/src/components/earnMoney/earnMoney.module.scss
+++ b/src/components/earnMoney/earnMoney.module.scss
@@ -168,6 +168,7 @@
 
         .scrollProgressBar {
           // transition: all 0.1s ease-in-out;
+          transition: all 0.1s linear;
           position: absolute;
           top: 0;
           width: 13px;
@@ -242,68 +243,76 @@
   }
 }
 
-// @media (max-width: 1025px) {
-//   .earnMoneySection {
-//     padding-top: 38px;
-//     padding-bottom: 117px;
-//     height: 100%;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
+@media (max-width: 1025px) {
+  .earnMoneySection {
+    padding-top: 38px;
+    padding-bottom: 117px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-//     .mainFixedBox {
-//       display: flex;
-//       flex-direction: column;
-//       align-items: center;
+    .headerTextTabMob {
+      text-align: center;
+      margin-bottom: 100px;
 
-//       .topTextBox {
-//         margin-bottom: 100px;
-//       }
+      h2 {
+        font-weight: bold;
+        font-size: 54px;
+        line-height: 120%;
+        color: $blue-ribbon-color;
+        margin: 0;
+        margin-bottom: 10px;
+      }
 
-//       .infoTextMainBox {
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-//         .infoTextBox {
-//           .InfoText {
-//             h3 {
-//             }
+      p {
+        font-weight: 600;
+        font-size: 28px;
+        line-height: 34px;
+        margin: 0;
+      }
+    }
 
-//             p {
-//             }
-//           }
+    .sections {
+      padding-top: 38px;
+      padding-bottom: 110px;
+      h3 {
+        margin: 0;
+        font-weight: bold;
+        font-size: 52px;
+        line-height: 70px;
+        margin-bottom: 18px;
+      }
 
-//           .infoTextActive {
-//             h3 {
-//             }
+      p {
+        margin: 0;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 150%;
+        margin-bottom: 42px;
 
-//             p {
-//               span {
-//               }
-//             }
-//           }
+        span {
+          font-weight: bold;
+        }
+      }
 
-//           .getEarlyAccess {
-//             span {
-//             }
+      img {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+      }
 
-//             button {
-//             }
-
-//             .unActive {
-//             }
-//           }
-//         }
-
-//         .infoImgBox {
-//           img {
-//           }
-//         }
-
-//         .scrollController {
-//           display: none;
-//         }
-//       }
-//     }
-//   }
-// }
+      button {
+        background-color: $blue-ribbon-color;
+        border: none;
+        border-radius: 38px;
+        width: 100%;
+        margin-top: 122px;
+        padding: 20px 32px;
+        font-size: 20px;
+        font-weight: bold;
+        color: #fff;
+      }
+    }
+  }
+}
