--- a/src/components/promote/promote.module.scss
+++ b/src/components/promote/promote.module.scss
@@ -98,3 +98,35 @@
     }
   }
 }
+
+@media (max-width: 1025px) {
+  .promoteSection {
+    .headerText {
+      h2 {
+        color: $blue-ribbon-color;
+        font-size: 54px;
+      }
+
+      p {
+        font-size: 24px;
+      }
+    }
+
+    .textDivImg {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .textDiv {
+        width: 90%;
+        max-width: none;
+      }
+
+      .imageDiv {
+        width: 90%;
+        margin-top: 45px;
+      }
+    }
+  }
+}
