--- a/src/components/waitlist/waitlist.module.scss
+++ b/src/components/waitlist/waitlist.module.scss
@@ -61,3 +61,36 @@
     }
   }
 }
+
+@media (max-width: 1025px) {
+  .joinWaitListSection {
+    margin-top: 300px;
+    display: flex;
+    flex-direction: column;
+
+    .joinWaitListTextDiv {
+      position: static;
+
+      h2 {
+        font-size: 60px;
+        margin-bottom: 14px;
+      }
+
+      p {
+        margin: 0;
+        font-size: 26px;
+
+        span {
+          color: $blue-ribbon-color;
+        }
+      }
+
+      button {
+        padding: 20px 32px;
+        font-size: 20px;
+        background-color: $blue-ribbon-color;
+        width: 85%;
+      }
+    }
+  }
+}
