--- a/src/components/partnersLogos/partnersLogos.module.scss
+++ b/src/components/partnersLogos/partnersLogos.module.scss
@@ -30,3 +30,13 @@
     }
   }
 }
+
+@media (max-width: 760px) {
+  .partnersLogosSection {
+    .logosContainer {
+      img {
+        width: 90%;
+      }
+    }
+  }
+}
