--- a/src/components/brandsIndividuals/brandsIndividuals.module.scss
+++ b/src/components/brandsIndividuals/brandsIndividuals.module.scss
@@ -25,15 +25,15 @@
       margin: 0;
       margin-bottom: 35px;
       font-weight: bold;
-      font-size: 60px;
-      line-height: 120%;
+      font-size: 48px;
+      line-height: 60px;
     }
 
     p {
-      width: 70%;
+      width: 40%;
       margin: 0;
       font-weight: normal;
-      font-size: 28px;
+      font-size: 20px;
       line-height: 150%;
       color: $gray-color;
     }
@@ -66,6 +66,37 @@
       p {
         width: 95%;
         font-size: 24px;
+      }
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  .brandsIndividualsSection {
+    margin-top: 82px;
+
+    img {
+      position: static;
+      height: 100%;
+    }
+
+    .brandsIndividualsContainer {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h2 {
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 150%;
+        text-align: center;
+      }
+
+      p {
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 150%;
       }
     }
   }
