--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -3,7 +3,8 @@
 .footerSection {
   // max-height: 640px;
   height: 100%;
-  padding: 250px 0;
+  padding: 150px 0;
+  padding-bottom: 25px;
   position: relative;
 
   .stayInLoop {
@@ -16,10 +17,10 @@
 
     input {
       width: 90%;
-      padding: 35px 44px;
+      padding: 15px 40px;
       padding-right: 0;
       font-weight: normal;
-      font-size: 27.7926px;
+      font-size: 20px;
       line-height: 33px;
       color: $gray-color;
       outline: none;
@@ -35,11 +36,11 @@
       bottom: 0;
       max-width: auto 0;
       font-weight: bold;
-      font-size: 27.0409px;
+      font-size: 20px;
       line-height: 32px;
       color: #fff;
       background-color: $blue-ribbon-color;
-      padding: 32px 47px;
+      padding: 15px 40px;
       border: none;
       border-radius: 46.9px;
     }
@@ -122,6 +123,179 @@
             margin-bottom: 25px;
             &:hover {
               transform: scale(1.1);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+//stayInLoopMob
+
+@media (max-width: 1025px) {
+  .footerSection {
+    .stayInLoopMob {
+      background-color: $blue-ribbon-color;
+      width: 100%;
+      padding: 48px 0;
+
+      div {
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        input {
+          color: #fff;
+          border: 2px solid #fff;
+          background-color: transparent;
+          border-radius: 35px;
+          margin-bottom: 9px;
+          font-size: 17.4857px;
+          line-height: 22px;
+          padding: 14px 11px;
+          width: 96%;
+        }
+
+        button {
+          width: 100%;
+          color: $blue-ribbon-color;
+          font-weight: bold;
+          border: 2px solid #fff;
+          background-color: #fff;
+          border-radius: 35px;
+          font-size: 17.4857px;
+          line-height: 22px;
+          padding: 11px 0;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  .footerSection {
+    .stayInLoopMob {
+      background-color: $blue-ribbon-color;
+      width: 100%;
+      padding: 48px 0;
+
+      div {
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        input {
+          color: #fff;
+          border: 2px solid #fff;
+          background-color: transparent;
+          border-radius: 35px;
+          margin-bottom: 9px;
+          font-size: 17.4857px;
+          line-height: 22px;
+          padding: 14px 11px;
+          width: 92%;
+        }
+
+        button {
+          width: 100%;
+          color: $blue-ribbon-color;
+          font-weight: bold;
+          border: 2px solid #fff;
+          background-color: #fff;
+          border-radius: 35px;
+          font-size: 17.4857px;
+          line-height: 22px;
+          padding: 11px 0;
+        }
+      }
+    }
+
+    .mainFooterDiv {
+      flex-direction: column-reverse;
+      height: 100%;
+
+      .logoDiv {
+        text-align: center;
+        margin-top: 72px;
+        p {
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 30px;
+          letter-spacing: 0.003em;
+        }
+        img {
+          max-width: 365px;
+        }
+      }
+
+      .contactFollowDiv {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+
+        .contactDiv {
+          height: 100%;
+          width: 100%;
+          margin-bottom: 51px;
+          margin-top: 110px;
+
+          h4 {
+            font-weight: bold;
+            font-size: 18.0148px;
+            line-height: 25px;
+            margin-bottom: 14px;
+          }
+
+          div {
+            text-align: center;
+            p {
+              font-weight: normal;
+              font-size: 14.7044px;
+              line-height: 25px;
+
+              &:last-child {
+                margin-top: 6px;
+              }
+            }
+          }
+        }
+
+        .followDiv {
+          width: 100%;
+          align-items: center;
+          h5 {
+            font-weight: bold;
+            font-size: 18.1082px;
+            line-height: 21px;
+          }
+
+          .linksImgDiv {
+            max-width: 0 auto;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            width: 60%;
+
+            img {
+              width: 27px;
+              height: 27px;
+              margin-top: 22px;
+              transition: all 0.2s ease-in-out;
+              cursor: pointer;
+              margin-bottom: 25px;
+              &:hover {
+                transform: scale(1.1);
+              }
             }
           }
         }
