--- a/src/components/getInTouch/getInTouch.module.scss
+++ b/src/components/getInTouch/getInTouch.module.scss
@@ -30,7 +30,7 @@
       max-width: 876px;
       span {
         font-weight: bold;
-        font-size: 28px;
+        font-size: 24px;
         line-height: 120%;
         color: $blue-ribbon-color;
       }
@@ -38,14 +38,14 @@
       h2 {
         margin: 22px 0;
         font-weight: bold;
-        font-size: 60px;
-        line-height: 72px;
+        font-size: 35px;
+        line-height: 50px;
       }
 
       p {
         margin: 0;
         font-weight: normal;
-        font-size: 28px;
+        font-size: 20px;
         line-height: 150%;
         opacity: 80%;
       }
@@ -61,8 +61,8 @@
         p {
           font-style: normal;
           font-weight: 500;
-          font-size: 27.2314px;
-          line-height: 120%;
+          font-size: 20px;
+          line-height: 150%;
           margin: 0;
           margin-bottom: 33px;
         }
@@ -72,11 +72,11 @@
           margin: 0;
           border: none;
           outline: none;
-          border-bottom: 4px solid #0043ea;
+          border-bottom: 2px solid #0043ea;
           padding: 9px 0;
           font-weight: normal;
-          font-size: 27.2314px;
-          line-height: 120%;
+          font-size: 17.4857px;
+          line-height: 22px;
         }
 
         button {
@@ -84,9 +84,9 @@
           background-color: $blue-ribbon-color;
           color: #fff;
           font-weight: bold;
-          font-size: 23.8043px;
-          line-height: 29px;
-          padding: 17px;
+          font-size: 20px;
+          line-height: 35px;
+          padding: 15px 40px;
           max-width: 140px;
           width: 100%;
           border: none;
@@ -109,7 +109,7 @@
           width: 100%;
           opacity: 0.1;
           left: 0;
-          height: 5px;
+          height: 4px;
           border-radius: 5px;
           z-index: 2;
         }
@@ -122,7 +122,7 @@
           opacity: 100;
           left: 0;
           width: 10%;
-          height: 5px;
+          height: 4px;
           border-radius: 5px;
           z-index: 3;
         }
@@ -180,6 +180,71 @@
             width: 100%;
             padding: 20px;
             font-size: 20px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  .getInTouchSection {
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    img {
+      width: 100%;
+    }
+    .getInTouchDiv {
+      width: 80%;
+      padding: 0 25px;
+
+      .headerTextTouch {
+        span {
+          display: none;
+        }
+
+        h2 {
+          font-weight: bold;
+          font-size: 28.7299px;
+          line-height: 120%;
+        }
+
+        p {
+          font-weight: normal;
+          font-size: 14.365px;
+          line-height: 150%;
+        }
+      }
+
+      .formTouchDiv {
+        width: 100%;
+
+        .formDiv {
+          max-width: 840px;
+          display: flex;
+          flex-direction: column;
+          margin: 0 auto;
+
+          p {
+            font-weight: 500;
+            font-size: 16.1606px;
+            line-height: 120%;
+          }
+
+          input {
+            font-weight: normal;
+            font-size: 17.7361px;
+            line-height: 120%;
+          }
+
+          button {
+            font-size: 15.2628px;
+            line-height: 19px;
+            text-align: center;
+            letter-spacing: -0.344613px;
+            padding: 11px;
           }
         }
       }
