--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -15,12 +15,12 @@ header {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 50%;
+    width: 40%;
 
     h1 {
       margin: 0;
       font-weight: bold;
-      font-size: 84px;
+      font-size: 60px;
       line-height: 120%;
 
       span {
@@ -31,10 +31,10 @@ header {
     p {
       margin: 0;
       margin-top: 31px;
-      width: 90%;
+      width: 80%;
       font-weight: normal;
-      font-size: 28px;
-      line-height: 120%;
+      font-size: 20px;
+      line-height: 150%;
       color: $gray-color;
     }
   }
@@ -65,28 +65,54 @@ header {
 @media (max-width: 1601px) {
   header {
     .headerTextContainer {
-      width: 70%;
+      width: 50%;
     }
   }
 }
 
 @media (max-width: 1200px) {
   header {
+    margin-top: 50px;
+
     .headerTextContainer {
       width: 90%;
 
       h1 {
-        font-size: 54px;
+        font-size: 39.7149px;
       }
 
       p {
-        font-size: 24px;
+        font-size: 16px;
       }
     }
 
     .headerImgContainer {
       .carImgClass {
         width: 75%;
+      }
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  header {
+    .headerTextContainer {
+      width: 95%;
+
+      h1 {
+        font-size: 32px;
+        line-height: 38px;
+      }
+
+      p {
+        font-size: 16px;
+        line-height: 150%;
+      }
+    }
+
+    .headerImgContainer {
+      .carImgClass {
+        width: 100%;
       }
     }
   }
