--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -29,7 +29,7 @@ nav {
         color: $gray-color;
         font-style: normal;
         font-weight: 600;
-        font-size: 24px;
+        font-size: 18px;
         line-height: 29px;
         transition: all 0.3s ease-in-out;
 
@@ -91,10 +91,10 @@ nav {
         border-radius: 33.3333px;
         background-color: $blue-ribbon-color;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 13.5227px;
         line-height: 22px;
         color: #fff;
-        padding: 20px 22px;
+        padding: 14px 27px;
       }
     }
   }
@@ -188,12 +188,15 @@ nav {
       max-width: 100%;
       transform-origin: top;
       transform: scaleY(1);
+      background-color: #fdfaf8;
+      padding-bottom: 25px;
+      opacity: 100%;
       transition: all 0.2s ease-in-out;
 
       .navbarLinks {
         a {
           font-weight: bold;
-          font-size: 19px;
+
           line-height: 18px;
         }
       }
@@ -207,7 +210,7 @@ nav {
 
         button {
           font-weight: bold;
-          font-size: 15.0222px;
+
           line-height: 19px;
           letter-spacing: -0.355661px;
           padding: 10px 20px;
@@ -217,6 +220,61 @@ nav {
 
     .navbarLinksClosed {
       transform: scaleY(0);
+      opacity: 0;
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  nav {
+    width: 100%;
+    padding: 0 15px;
+    .navbarLinksOpened {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 0px;
+      bottom: -900%;
+      height: 800%;
+      max-width: 106%;
+
+      .navbarLinks {
+        align-items: center;
+        justify-content: space-around;
+        height: 60%;
+      }
+
+      .navbarLinks {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .navbarSocialLinksBtnContainer {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 60%;
+        margin-top: 40px;
+
+        .navbarSocialLinks {
+          margin-top: 50px;
+          padding-bottom: 40px;
+          width: 100%;
+        }
+
+        .buttonClass {
+          width: 100%;
+          button {
+            width: 100%;
+            font-size: 15.0222px;
+            line-height: 19px;
+          }
+        }
+      }
+    }
+
+    .navbarLinksClosed {
+      transform: scaleY(0);
+      opacity: 0;
     }
   }
 }
