--- a/src/components/waitlist/waitlist.module.scss
+++ b/src/components/waitlist/waitlist.module.scss
@@ -16,14 +16,15 @@
     h2 {
       margin: 0;
       font-weight: bold;
-      font-size: 65.0553px;
-      line-height: 120%;
+      font-size: 48px;
+      line-height: 39px;
+      letter-spacing: -1.86393px;
       margin-bottom: 20px;
     }
 
     p {
       margin: 0;
-      font-size: 30.3591px;
+      font-size: 24px;
       line-height: 150%;
 
       span {
@@ -35,10 +36,10 @@
     button {
       margin-top: 75px;
       font-weight: bold;
-      font-size: 28.3422px;
+      font-size: 20px;
       line-height: 34px;
       background-color: $sandy-brown-color;
-      padding: 29px 47px;
+      padding: 15px 40px;
       color: #fff;
       border: none;
       border-radius: 42.5132px;
@@ -72,13 +73,13 @@
       position: static;
 
       h2 {
-        font-size: 60px;
+        font-size: 54px;
         margin-bottom: 14px;
       }
 
       p {
         margin: 0;
-        font-size: 26px;
+        font-size: 24px;
 
         span {
           color: $blue-ribbon-color;
@@ -87,7 +88,40 @@
 
       button {
         padding: 20px 32px;
-        font-size: 20px;
+        font-size: 16px;
+        background-color: $blue-ribbon-color;
+        width: 85%;
+      }
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  .joinWaitListSection {
+    margin-top: 300px;
+    display: flex;
+    flex-direction: column;
+
+    .joinWaitListTextDiv {
+      position: static;
+
+      h2 {
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 120%;
+      }
+
+      p {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 150% span {
+          color: $blue-ribbon-color;
+        }
+      }
+
+      button {
+        padding: 12px 32px;
+        font-size: 16px;
         background-color: $blue-ribbon-color;
         width: 85%;
       }
