--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -8,6 +8,7 @@ header {
   align-items: center;
   justify-content: space-between;
   background: url("../../assets/cityBack.svg") no-repeat left bottom;
+  background-size: 70%;
   margin-top: 140px;
 
   .headerTextContainer {
