--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -140,6 +140,7 @@ nav {
         transform: rotate(0deg);
         position: absolute;
         top: 0;
+        z-index: 99999;
       }
 
       .upperBurgerOpen {
@@ -156,6 +157,7 @@ nav {
         top: 0;
         bottom: 0;
         margin: auto;
+        z-index: 99999;
       }
 
       .middleBurgerOpen {
@@ -169,6 +171,7 @@ nav {
         transform: rotate(0deg);
         position: absolute;
         bottom: 0;
+        z-index: 99999;
       }
 
       .bottomBurgerOpen {
@@ -237,6 +240,7 @@ nav {
       bottom: -900%;
       height: 800%;
       max-width: 106%;
+      z-index: 99999;
 
       .navbarLinks {
         align-items: center;
