--- a/src/components/getInTouch/getInTouch.module.scss
+++ b/src/components/getInTouch/getInTouch.module.scss
@@ -86,12 +86,40 @@
           font-weight: bold;
           font-size: 20px;
           line-height: 35px;
-          padding: 15px 40px;
+          padding: 10px 40px;
           max-width: 140px;
           width: 100%;
           border: none;
           border-radius: 38.5873px;
           cursor: pointer;
+
+          & {
+            overflow: hidden;
+            color: #fff;
+            background-color: $turbo-color;
+            -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+
+            &:hover {
+              color: $blue-ribbon-color;
+              background-color: $turbo-color;
+            }
+
+            &::before {
+              position: absolute;
+              top: -4px;
+              content: "";
+              background-color: $blue-ribbon-color;
+              width: 113%;
+              height: 110%;
+              left: -10%;
+              transform: skew(30deg);
+              transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+            }
+
+            &:hover::before {
+              transform: translate3d(100%, 0, 0);
+            }
+          }
         }
       }
 
@@ -125,6 +153,56 @@
           height: 4px;
           border-radius: 5px;
           z-index: 3;
+        }
+
+        .resetButton {
+          margin: 0 auto;
+          display: block;
+          margin-top: 25px;
+          position: absolute;
+          left: 0;
+          right: 0;
+
+          background-color: $blue-ribbon-color;
+          color: #fff;
+          font-weight: 600;
+          letter-spacing: 2px;
+          font-size: 20px;
+          line-height: 35px;
+          padding: 10px 40px;
+          max-width: 140px;
+          width: 100%;
+          border: none;
+          border-radius: 38.5873px;
+          cursor: pointer;
+
+          & {
+            overflow: hidden;
+            color: #fff;
+            background-color: $turbo-color;
+            -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+
+            &:hover {
+              color: $blue-ribbon-color;
+              background-color: $turbo-color;
+            }
+
+            &::before {
+              position: absolute;
+              top: -4px;
+              content: "";
+              background-color: $blue-ribbon-color;
+              width: 113%;
+              height: 110%;
+              left: -10%;
+              transform: skew(30deg);
+              transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+            }
+
+            &:hover::before {
+              transform: translate3d(100%, 0, 0);
+            }
+          }
         }
       }
     }
