--- a/src/index.scss
+++ b/src/index.scss
@@ -19,5 +19,24 @@ html {
     #root {
       width: 100%;
     }
+
+    button {
+      position: relative;
+      //display: inline-block;
+
+      span {
+        position: relative;
+        z-index: 2;
+      }
+
+      &::before,
+      &::after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 }
