--- a/src/components/earnMoney/earnMoney.module.scss
+++ b/src/components/earnMoney/earnMoney.module.scss
@@ -159,8 +159,12 @@
 
         img {
           // width: 100%;
-          height: 100%;
+          height: 90%;
           margin: 0 auto;
+        }
+
+        .fadeIn {
+          animation: fade-in 0.5s ease-in-out;
         }
 
         // .unActive {
@@ -223,6 +227,15 @@
         }
       }
     }
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
   }
 }
 
